<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Festival Plum</string>
    <string name="action_favourite">Kedvencek</string>
    <string name="action_sett">Elrendezés</string>
    <string name="action_search">Keresés</string>
    <string name="title_activity_festival">Fesztivál</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Beállítások</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="search_hint">Keresés</string>
    <string name="title_activity_starter">StarterActivity</string>
    <string name="title_activity_favorite">Kedvencek</string>
    <string name="title_activity_map">Térkép</string>
    <string name="title_activity_history">Korábbi események</string>
    <string name="selected">kiválasztott</string>
    <string name="action_delete">Törlés</string>
    <string name="action_history">Korábbi események</string>

    <string name="action_about">Névjegy</string>

    <string name="dialog_delete_favorite_title">Kedvenc törlése</string>
    <string name="dialog_delete_favorite_msg">Biztosan törölni akarod a koncertet a kedvencek közül?</string>

    <string name="yes">Igen</string>
    <string name="no">Nem</string>

    <string name="tab_time">Idő</string>
    <string name="tab_name">Név</string>
    <string name="tab_city">Város</string>
    <string name="tab_band">Fellépő</string>
    <string name="tab_program">Program</string>
    <string name="tab_map">Térkép</string>
    <string name="tab_info">Infó</string>

    <string name="sdf">yyyy.MM.dd.HH:mm</string>
    <string name="sdfDate">yy.MM.dd</string>
    <string name="sdfMMdd">MM.dd</string>
    <string name="sdfTime">HH:mm</string>

    <string name="openGate">Kapunyitás</string>


    <string-array name="months">
        <item>Január</item>
        <item>Február</item>
        <item>Március</item>
        <item>Április</item>
        <item>Május</item>
        <item>Június</item>
        <item>Július</item>
        <item>Augusztus</item>
        <item>Szeptember</item>
        <item>Október</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <string name="action_language">Language</string>

    <string name="lang_hu">Magyar</string>
    <string name="lang_en">Angol</string>
    <string name="priority">Prioritás</string>
    <string name="ok">Ok</string>
    <string name="cancel">Mégse</string>

    <string name="banner_ad_unit_id">ca-app-pub-9998066377856283/2303404455</string>
</resources>
