<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="hu.festivalplum.home.HomeActivity">
    <item
        android:id="@+id/action_search"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@android:drawable/ic_menu_search"
        android:showAsAction="ifRoom"
        android:title="@string/action_search" />
    <item
        android:id="@+id/action_favourite"
        android:icon="@android:drawable/btn_star_big_off"
        android:showAsAction="ifRoom"
        android:title="@string/action_favourite" />
    <item
        android:id="@+id/action_history"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_history" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_about" />
    <item
        android:id="@+id/action_language"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_language" />

</menu>
