<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="hu.festivalplum.favorite.FavoriteActivity">
    <item
        android:id="@+id/action_history"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_history" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_about" />
    <item
        android:id="@+id/action_language"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_language" />

</menu>