<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="200dp"
    android:layout_height="200dp">

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lang_hu"
        android:id="@+id/radioHu"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lang_en"
        android:id="@+id/radioEn"
        android:layout_below="@+id/radioHu"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />



    <Button
        android:id="@+id/btn_yes"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:background="@android:color/white"
        android:clickable="true"
        android:text="@string/ok"
        android:textStyle="bold"
        android:layout_alignTop="@+id/btn_no"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/btn_no"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:background="@android:color/white"
        android:clickable="true"
        android:text="@string/cancel"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
